--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -23,9 +23,7 @@
       "name": "notebook.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "ILjiSmNPFszZ",
         "KKPWfuut3XRZ",
-        "VzvjSooe4r_a",
         "gD-NeoeVeTWv",
         "jq5LnGDtfLo-",
         "XnG6cE6GXBaT",
@@ -47,8 +45,8 @@
         "outputId": "bb52509f-1482-4dc5-8743-e01f4000fb1f"
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ],
       "execution_count": 1,
       "outputs": [
@@ -73,6 +71,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "htTPS1UlXOo-"
+      },
+      "source": [
+        "!pip install pandas sklearn matplotlib seaborn"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "_1RMZ9123XRP"
       },
       "source": [
@@ -83,7 +92,8 @@
         "from sklearn.model_selection import train_test_split\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "import re"
       ],
       "execution_count": 36,
       "outputs": []
@@ -94,7 +104,8 @@
         "id": "sdpaz1fd3XRQ"
       },
       "source": [
-        "data_path = Path('/content/drive/MyDrive/colab/Monoxor/requests.json') # path for .json file\n",
+        "# data_path = Path('/content/drive/MyDrive/colab/Monoxor/requests.json') # path for .json file\n",
+        "data_path = Path('requests.json')\n",
         "with open(data_path) as f:\n",
         "    data = json.load(f)"
       ],
@@ -388,48 +399,6 @@
       },
       "source": [
         "### cleaning text"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_O6qJF3k47GB",
-        "outputId": "dc28c42e-f141-4818-c8b6-589bd0b8ea0f"
-      },
-      "source": [
-        "import nltk\n",
-        "from string import punctuation\n",
-        "from nltk import word_tokenize\n",
-        "import re\n",
-        "nltk.download('punkt')\n",
-        "\n",
-        "# stop_words = list(punctuation) + [str(i) for i in range(10)]"
-      ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 14
-        }
       ]
     },
     {
